Spring Movie app jpa